build,config(static files for serving):Updated; Fixed
- Content
1) Static files serving fixed

--- a/templates/common/base.html
+++ b/templates/common/base.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="{% static 'common/css/style.css' %}">
 
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 {% include 'common/head.html' %}
     <body>
     {% block content %}
