--- a/templates/common/base.html
+++ b/templates/common/base.html
@@ -1,10 +1,11 @@
+<!DOCTYPE html>
 {% load static %}
 
 <link rel="stylesheet" href="{% static 'common/css/style.css' %}">
 
-<!DOCTYPE html>
+
 <html lang="ko">
-{% include 'common/head.html' %}
+{% include 'common/header.html' %}
     <body>
     {% block content %}
 
